...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/matches_reminder_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reminder Time" />

    <Button
        android:id="@+id/select_matches_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matches_reminder_time_label"
...
