...
    <string name="app_setting">App Setting</string>
    <string name="user_profile_setting">user profile setting</string>
    <string name="profile">profile</string>
    <string name="setting">setting</string>
    <string name="matches">matches</string>
    <string name="pick_date">pick date</string>
    <string name="drawer_open">open navigation drawer</string>
    <string name="drawer_close">close navigation drawer</string>
    <string name="matches_image">matches image</string>
    <string name="like_button">like</string>
    <string name="you_liked">you liked: %s</string>
    <string name="private_radio">private radio</string>
    <string name="public_radio">public radio</string>
...
